syntax = "proto3";

package ibc.applications.nft_transfer.v1;

option go_package = "github.com/initia-labs/initia/x/ibc/nft-transfer/types";

import "gogoproto/gogo.proto";
import "amino/amino.proto";

// ClassTrace contains the base class id for ICS721 non fungible tokens and the
// source tracing information path.
message ClassTrace {
  // path defines the chain of port/channel identifiers used for tracing the
  // source of the non fungible token.
  string path = 1;
  // base class id of the relayed non fungible token.
  string base_class_id = 2;
}

// Params defines the set of IBC nft transfer parameters.
message Params {
  option (amino.name)                 = "nft-transfer/Params";
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  // send_enabled enables or disables all cross-chain token transfers from this chain.
  bool send_enabled = 1 [(gogoproto.moretags) = "yaml:\"send_enabled\""];
  // receive_enabled enables or disables all cross-chain token transfers to this chain.
  bool receive_enabled = 2 [(gogoproto.moretags) = "yaml:\"receive_enabled\""];
}
